--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/p5": "^1.3.1",
+    "p5": "^1.4.0",
     "three": "^0.134.0",
     "yargs": "^17.2.1"
   },
